Properly handle `json_array` type removal
The `json_array` type was removed from DBAL v3, we should handle it using a migration to avoid error.
I've also added the remove type because we need it during migration.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,6 +59,8 @@ doctrine:
         charset: "%database_charset%"
         path: "%database_path%"
         unix_socket: "%database_socket%"
+        types:
+            json_array: Wallabag\CoreBundle\Doctrine\JsonArrayType
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
