Fix `database_path` in Docker env
Also, add `mailer_dsn` and limit xdebug to allow installation of PHP < 8

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -53,7 +53,7 @@ RUN docker-php-ext-install -j "$(nproc)" \
 
 RUN pecl install redis; \
     pecl install imagick; \
-    pecl install xdebug; \
+    pecl install xdebug-3.1.6; \
     docker-php-ext-enable \
         redis \
         imagick \
