Update annotations to OpenApi 3
Most of the API annotations are directly converted. The changes in meaning are:
- Parameters "in body" is not supported anymore. These are changed to "in query" or to a request body (depending on the code).

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -128,12 +128,13 @@ nelmio_api_doc:
             title: wallabag API documentation
             description: This is the API documentation of wallabag
             version: 2.x
-        securityDefinitions:
-            Bearer:
-                type: apiKey
-                description: 'Value: Bearer {jwt}'
-                name: Authorization
-                in: header
+        components:
+            securitySchemes:
+                Bearer:
+                    type: apiKey
+                    description: 'Value: Bearer {jwt}'
+                    name: Authorization
+                    in: header
         security:
             - Bearer: []
 
