--- a/docker/php/config/parameters.yml
+++ b/docker/php/config/parameters.yml
@@ -7,7 +7,7 @@ parameters:
     database_user: ${DATABASE_USER:-root}
     database_password: ${DATABASE_PASSWORD:-~}
     database_path: ${DATABASE_PATH:-"%kernel.root_dir%/data/db/wallabag.sqlite"}
-    database_table_prefix: wallabag_
+    database_table_prefix: ${DATABASE_TABLE_PREFIX:-wallabag_}
     database_socket: null
     database_charset: ${DATABASE_CHARSET:-utf8}
 
