Fix public folder for Symfony 4+
This is a temporary fix while waiting for migration to Flex

See https://symfony.com/doc/current/setup/flex.html#flex-customize-paths

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/composer.json
+++ b/composer.json
@@ -161,7 +161,8 @@
     "extra": {
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
-        }
+        },
+        "public-dir": "web"
     },
     "autoload": {
         "psr-4": {
