Allow php-http/discovery composer plugin

--- a/composer.json
+++ b/composer.json
@@ -188,7 +188,8 @@
         },
         "sort-packages": true,
         "allow-plugins": {
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "dev",
